# NextPermutation

./: CMakeLists.txt  README.md
src/: NextPermute.h  main.cpp
test/: NextPermuteTest.cpp  main.cpp
